
  [ Theppitak Karoonboonyanan ]
  * Update task-thai-gnome-desktop and task-thai-kde-desktop:
    - task-thai-gnome-desktop: Add gtk3-im-libthai
    - task-thai-kde-desktop: Add libthai-dev (which enhances libkhtml5)
  
  [ Changwoo Ryu ]
  * Update task-korean-desktop and task-korean-gnome-desktop:
    - Add ibus-gtk3 to task-korean-gnome-desktop
    - Replace ttf-* with fonts-*

 -- Christian Perrier <bubulle@debian.org>  Mon, 05 Dec 2011 21:29:17 +0100

tasksel (3.07) unstable; urgency=low

  * Team upload
  * Changes requested by the GNOME maintenance team for GNOME 3
    transition. Closes: #646741. That includes the following changes in
    gnome tasks:
    - a typo fix in the package description
    - gdm3  being dropped from Depends, as it is a dependency of gnome-core now.
    - gnome-accessibility no longer exists as a separate meta-package. Its
      functionality will be merged into gnome-core directly.
    - gnome-desktop-environment is a transitional package, which has been
      replaced by gnome, so drop it.
    - iceweasel-gnome-support no longer exists, its functionality has been
      merged into iceweasel, so drop it.
    - the gnome meta-package already depends on inkscape, so drop it.
    - the gnome-core meta-package already depends on epiphany-browser, so drop it.    

 -- Christian Perrier <bubulle@sesostris.kheops.frmug.org>  Sat, 05 Nov 2011 18:04:25 +0100

tasksel (3.06) unstable; urgency=low

  [ Joey Hess ]
  * Remove the now empty task overrides file.
  * Add Vcs-Browser field. Closes: #636209

  [ Christian Perrier ]
  * Recommend cifs-utils in task-file-server instead of deprecated smbfs
    Closes: #638606

  [ Yves-Alexis Perez ]
  * debian/control:
    - switch Xfce login manager to LightDM now that it has reached testing.

  [ Translations of tasks ]
  * Sinhala (Danishka Navin). Closes: #640761

  [ Translations of debconf templates ]
  * Sinhala (Danishka Navin). Closes: #640761

  [ Translations of programs ]