@@ -115,15 +115,13 @@ sub list_avail {
 # Returns a list of all installed packages.
 sub list_installed {
 	my @list;
-	local $/="\n\n";
-	open (STATUS, $statusfile);
-	local $_;
-	while (<STATUS>) {
-		if (/^Status: .* installed$/m && /Package: (.*)$/m) {
+	open (LIST, q{dpkg-query -W -f='${Package} ${Status}\n' |});
+	while (<LIST>) {
+		if (/^([^ ]+) .* installed$/m) {
 			push @list, $1;
 		}
 	}
-	close STATUS;
+	close LIST;
 	return @list;
 }
 
